# accountir

./: .gitignore  Cargo.toml  LICENSE.md  README.md  accountir.dbj  bugbearnewest
.github/workflows/: build.yml  ci.yml  dev.yml  release.yml
examples/: gnucash.gnucash
migrations/: 001_initial.sql  002_add_company_id.sql  003_bank_imports.sql  004_plaid.sql  005_plaid_staging.sql  006_plaid_payment_meta.sql  007_plaid_balance_snapshot.sql
scripts/: install.ps1  install.sh
src/: config.rs  lib.rs  main.rs
src/commands/: account_commands.rs  entry_commands.rs  import_commands.rs  mod.rs  plaid_commands.rs  reconciliation_commands.rs
src/domain/: account.rs  fiscal_period.rs  journal_entry.rs  mod.rs  money.rs  reconciliation.rs
src/events/: mod.rs  payload.rs  types.rs  validation.rs
src/gnucash/: import.rs  mod.rs
src/queries/: account_queries.rs  mod.rs  reports.rs  search.rs  subscriptions.rs
src/server/: mod.rs  plaid_link.html
src/store/: event_store.rs  merkle.rs  migrations.rs  mod.rs  projections.rs
src/tui/: app.rs  mod.rs  theme.rs  widgets.rs
src/tui/views/: account_form.rs  accounts.rs  bank_import.rs  csv_import.rs  dashboard.rs  entry_detail.rs  entry_form.rs  event_log.rs  help.rs  journal.rs  mod.rs  plaid.rs  plaid_config.rs  plaid_link.rs  plaid_staged.rs  reports.rs  settings.rs  startup.rs  subscriptions.rs  welcome.rs
